tests/snapshots/cmd_update__cmd_update::update_all-output.snap
---
source: tests/cmd_update.rs
expression: value
---
exit_code: 0
---stderr---
updated Swatinem/rust-cache v2.7.0 -> v2.7.8 (9d47c6ad4b02)
updated actions/checkout v4.1.0 -> v4.2.2 (11bd71901bbe)
