tests/snapshots/cmd_update__cmd_update::update_already_latest-output.snap
---
source: tests/cmd_update.rs
expression: value
---
exit_code: 0
---stderr---
actions/checkout v4.2.2 is already up to date
