tests/snapshots/cmd_update__cmd_update::update_breaking-output.snap
---
source: tests/cmd_update.rs
expression: value
---
exit_code: 0
---stderr---
     Updated Swatinem/rust-cache v1.4.0 -> v2.7.8 (9d47c6ad4b02)
