tests/snapshots/cmd_update__cmd_update::update_dry_run-output.snap
---
source: tests/cmd_update.rs
expression: value
---
exit_code: 0
---stderr---
Would update Swatinem/rust-cache v2.7.0 -> v2.7.8 (9d47c6ad4b02)
  Up to date actions/checkout v4.2.2
