tests/snapshots/cmd_update__cmd_update::update_specific-diff.snap
---
source: tests/cmd_update.rs
expression: value
---
--- a/.github/ghat/ghat.lock
+++ b/.github/ghat/ghat.lock
@@ -1,2 +1,2 @@
 Swatinem/rust-cache tag:v2.7.0 bd47c6ad4b02e050fd481d890b2ea34778fd09d6
-actions/checkout tag:v4.1.0 8ade135a41bc03ea155e62e844d188df1ea18608
+actions/checkout tag:v4.2.2 11bd71901bbe5b1630ceea73d27597364c9af683
