tests/snapshots/cmd_update__cmd_update::update_within_major-output.snap
---
source: tests/cmd_update.rs
expression: value
---
exit_code: 0
---stderr---
updated actions/checkout v4.1.0 -> v4.2.2 (11bd71901bbe)
