tests/snapshots/cmd_update__update_empty_lockfile.snap
---
source: tests/cmd_update.rs
expression: output
---
exit_code: 1
---stderr---
Error: 
  x lockfile is empty, nothing to update
